<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".github.GithubActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/bt_search">
        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_name"
            android:textSize="@dimen/item_text_size"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="search"
        android:textSize="@dimen/item_text_size"
        android:layout_alignParentEnd="true"/>

    <LinearLayout
        android:id="@+id/layout_user_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_below="@+id/text_input_layout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_user_icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:contentDescription="avatar" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/item_text_size"
            android:layout_gravity="center"
            android:textStyle="bold"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_repo_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_below="@+id/layout_user_details">
    </android.support.v7.widget.RecyclerView>

</RelativeLayout>