...
            android:layout_weight="1"
            android:gravity="start"
            android:textSize="@dimen/item_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_last_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/item_text_size_small"
            android:gravity="end"/>
    </LinearLayout>
...
